Actions
Bug #895
closedsnoop lies about SMB errors
Start date:
2011-04-09
Due date:
% Done:
0%
Estimated time:
Difficulty:
Tags:
Gerrit CR:
Description
snoop has some limited decoding of SMB packets. One relatively
interesting thing it can decode is the error code in responses.
Unfortunately, snoop decodes most error code incorrectly,
showing zero when there really was an error.
The main isssue is that snoop does not test the SMB "flags2"
word that indicates whether old-style (DOS) errors are used
or the new-stile (NT) status codes.
There are also several things that are poorly formatted.
These problems were also described in CR 4625421
http://bugs.opensolaris.org/view_bug.do?bug_id=4625421
A fix was published, but never integrated:
http://cr.opensolaris.org/~gwr/snoop/
Updated by Gordon Ross about 11 years ago
- Status changed from New to Resolved
changeset: 13340:43bfdefd2c41
Actions