895 snoop lies about SMB errors Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: richard.elling@richardelling.com Approved by: Albert Lee <trisk@opensolaris.org>